# gcpv-lynx-generator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: windows-release.yml
src/: app_logic.rs  db.rs  gui.rs  lib.rs  logic.rs  main.rs  writer.rs
test-data/: 752_BCCup_2024_final - Nov 23 and 24.pat  LYNX.EVT  races.json
